changed introspection query